# plot3dshadows

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/: advanced_example.py  basic_example.py
plot3dshadows/: __init__.py  plot3dshadows.py
plot3dshadows.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  test_plot3dshadows.py
