[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plot3dshadows"
version = "0.1.0"
description = "A package for 3D plotting with shadows on coordinate planes"
readme = "README.md"
keywords = ["matplotlib", "3d", "plotting", "visualization", "shadows"]

requires-python = ">=3.7"
dependencies = [
    "matplotlib>=3.3.0",
    "numpy>=1.19.0",
    "seaborn>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "isort>=5.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/plot3dshadows"
Documentation = "https://github.com/yourusername/plot3dshadows#readme"
Repository = "https://github.com/yourusername/plot3dshadows"
"Bug Tracker" = "https://github.com/yourusername/plot3dshadows/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short" 